--- a/templates/actor/parts/actor-crafting.hbs
+++ b/templates/actor/parts/actor-crafting.hbs
@@ -1,28 +1,48 @@
-<table>
+<table class="backpack">
     <tr>
-        <td>
-            <table class="equipped-stats">
-                {{#each system.materials as |material key|}}
-                <tr>
-                    <td style="width:200px">
-                        {{material.label}}
-                    </td>
-                    <td style="width:50px">
-                        <input type="number" name="system.materials.{{ key }}.value" value="{{ material.value }}" min="0" />
-                    </td>
-                </tr>
+        {{#if materials}}
+        <td style="padding-right:10px;">
+            <table class="equipped-stats" style="margin-right:5px;max-width:250px;">
+                <tr><td colspan="999"><h3>Materials</h3></td></tr>
+                {{#each materials as |item id|}}
+            <tr>
+                <td>{{item.name}}</td>
+                <td>
+                    <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
+                    {{ system.quantity }}
+                    <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
+                </td>
+                <td class="td-controls">
+                    <li class="item flexrow" data-item-id="{{ item._id }}">
+                        <div class="item-controls">
+                            <a class="item-control"
+                               data-edit
+                               data-item-id="{{ item._id }}"
+                               title="{{localize 'DOCUMENT.Update' type='item'}}">
+                                <i class="fas fa-edit"></i>
+                            </a>
+                            <a class="item-control item-delete"
+                               title="{{localize 'DOCUMENT.Delete' type='item'}}">
+                                <i class="fas fa-trash"></i>
+                            </a>
+                        </div>
+                    </li>
+                </td>
+            </tr>
                 {{/each}}
             </table>
-       </td>
-    <td style="width:66%;">
+            {{/if}}
+        </td>
+        <td>
             {{#if junk}}
-            <table class="equipped-stats" style="width:95%;margin-left:20px;">
-                <tr>
-                    <td colspan=999>JUNK</td>
-                </tr>
+            <table class="equipped-stats">
+                <tr><td colspan=999><h3>junk</h3></td></tr>
                 {{#each junk as |item id|}}
                 <tr>
-                    <td>{{ item.name }} ({{item.system.quantity}})</td>
+                    <td style="max-width: 225px;min-width:150px">
+                        <span class="label"> {{ item.name }} ({{ system.quantity }}) </span>
+                    </td>
+
                     <td>
                         {{#if (gt system.junk.quantity1 0)}} {{ system.junk.type1 }} ({{ system.junk.quantity1 }}){{/if}}
                         {{#if (gt system.junk.quantity2 0)}} {{ system.junk.type2 }} ({{ system.junk.quantity2 }}){{/if}}
@@ -37,8 +57,7 @@
                                    title="{{localize 'DOCUMENT.Update' type='item'}}">
                                     <i class="fas fa-edit"></i>
                                 </a>
-                                <a 
-                                   class="item-control item-delete"
+                                <a class="item-control item-delete"
                                    title="{{localize 'DOCUMENT.Delete' type='item'}}">
                                     <i class="fas fa-trash"></i>
                                 </a>
@@ -48,7 +67,6 @@
                 </tr>
                 {{/each}}
             </table>
-            {{/if}}
-       </td>
-    </tr>
+            <div>
+                {{/if}}
 </table>
