--- a/templates/item/item-material-sheet.hbs
+++ b/templates/item/item-material-sheet.hbs
@@ -1,38 +1,33 @@
-<form class="{{cssClass}} material-sheet" autocomplete="off">
-    <header class="sheet-header">
-        <h1 class="title">
-            <input name="name" type="text" value="{{item.name}}" placeholder="Name" class="editable" />
-        </h1>
-        <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="64" width="64" />
-    </header>
-    <section class="sheet-body">
-        <section class="cell">
-            <h2 class="title center underline">{{item.name}}</h2>
-        </section>
+<form class="{{ cssClass }}" autocomplete="off">
+  <header class="sheet-header">
+    <img class="profile-img" src="{{ item.img }}" data-edit="img" title="{{ item.name }}" />
+    <div class="header-fields">
+      <h1 class="charname">
+        <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
+      </h1>
+       <table style="width:200px;">
+           <tr>
+               <td>Qty:</td>
+               <td><input style="width:50px;float:left" type="number" name="system.quantity" value="{{ system.quantity }}" /></td>
+           </tr>
+       </table>
+    </div>
+  </header>
+  {{!-- Sheet Tab Navigation --}}
+  <nav class="sheet-tabs tabs" data-group="primary">
+    <a class="item" data-tab="description">Description</a>
+    <a class="item" data-tab="effects">Effects</a>
+  </nav>
 
-
-        <section class="cell attachedItems">
-            <h2 class="title center underline">Attachments</h2>
-            <section class="item-list">
-                {{#if system.attachedItems}}
-                {{#each attachments as |attachment uuid|}}
-                <div class="item attachment" data-uuid="{{uuid}}">
-                    <h3 class="menu">
-                        <img src="{{attachment.img}}" alt="{{attachment.name}}" style="height: 1.2rem;" />
-                        {{attachment.name}}
-                        <small class="small fire-dark">{{localize (tr_path "falloutzero.items.types" attachment.type)}}</small>
-                    </h3>
-                    {{#if attachment.system.description}}
-                    <div class="description-scroll" style="">
-                        {{{enrichHTML attachment.system.description}}}
-                    </div>
-                    {{/if}}
-                </div>
-                {{/each}}
-                {{else}}
-                <p>Nothing is Attached</p>
-                {{/if}}
-            </section>
-        </section>
-    </section>
+  {{!-- Sheet Body --}}
+  <section class="sheet-body">
+    {{!-- Description Tab --}}
+    <div class="tab" data-group="primary" data-tab="description">
+      {{editor system.description target="system.description" rollData=rollData engine="prosemirror" button=true owner=owner editable=editable}}
+    </div>
+    {{!-- Effects Tab --}}
+    <div class="tab effects" data-group="primary" data-tab="effects">
+      {{> "systems/arcane-arcade-fallout/templates/item/parts/item-effects.hbs"}}
+    </div>
+  </section>
 </form>
