--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -1,10 +1,3 @@
- <style>
-  .sheet table .foodanddrinks td {
-    border: solid 1px;
-    vertical-align: middle;
-    padding:10px;
-  }
-</style>
 <table class="equipped-stats">
 <tr><td style="width:45%;vertical-align:top">
     <h3>Weapons and Armor</h3>
@@ -66,7 +59,7 @@
     <tr>
         {{#if foodAnddrinks}}
         <td style="padding-right:10px">
-            <table class="foodanddrinks" style="margin-right:5px">
+            <table class="equipped-stats">
                 <tr><td colspan="999" ><h3>Food and Drinks</h3></td></tr>
                 <div>
                 <tr><td>Name</td><td>Description</td><td>Load</td><td></td></tr>
