--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -67,8 +67,8 @@
                   </tr>
                   <tr>
                     <td class="bio-label"><span class="label">Level:</span></td>
-                    <td colspan="2" style="border:solid 1px">
-                      <span class="label">{{ system.level }}</span>
+                    <td style="margin:0px;padding:0px;vertical-align:middle;border:solid 1px" colspan="2">
+                      <span class="level">{{ system.level }}</span>
                     </td>
                   </tr>
                   <tr>
@@ -105,7 +105,7 @@
                 <table>
                   <tr>
                     <td>
-                      <table>
+                      <table class="character-status">
                         <tr>
                             <td colspan="2">
                                 <span class="status-label">HP</span>
